<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_no_of_students"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/totalNumberOfStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/as_students"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/numberOfAs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bs_students"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/numberOfBs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cs_students"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/numberOfCs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ds_students"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/numberOfDs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fs_students"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/numberOfFs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/computeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

</LinearLayout>